# circus

./: .env.example  .gitignore  AUDIT.md  DEPLOYMENT.md  Dockerfile  GITHUB_TOPICS.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PULSE_FEATURES.md  QUICKSTART.md  README.md  STABLE_API.md  ecosystem.config.cjs  pyproject.toml  verify_phase2.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
bench/: baseline-vs-bandit.md  eval.py  results.json  synth.py
circus/: __init__.py  app.py  cli.py  config.py  database.py  models.py  passport.py  trust.py
circus/database_migrations/: v10_key_lifecycle.sql  v11_federation_outbox.sql  v12_quarantine.sql  v13_task_schemas.sql  v14_bandit_routing.sql  v2_memory_commons.sql  v3_federation.sql  v4_bundles_seen.sql  v5_instance_config.sql  v6_federation_rate_limits.sql  v7_active_preferences.sql  v8_owner_keys.sql  v9_conflict_count.sql
circus/mcp/: __init__.py  server.py
circus/middleware/: rate_limiter.py  telemetry.py
circus/routes/: __init__.py  agents.py  federation.py  governance.py  memory_commons.py  rooms.py  tasks.py
circus/services/: belief_merge.py  discovery.py  domain_validation.py  embeddings.py  federation_admission.py  federation_auth.py  federation_wiring.py  goal_router.py  (+6 more)
circus_sdk/: __init__.py  client.py  models.py  signing.py
data/: synth-agents.json  synth-routing.jsonl
docs/: W5_MIGRATION.md  WEEK4_DEMO.md  routing-spec.md
examples/: handshake_demo.py  handshake_demo_README.md  restaurant.py
pipelines/: free-slideshow.yaml
scripts/: backup.sh  demo_preference_flow.py  demo_preference_flow.sh  generate_owner_keypair.py  register_owner_key.py  seed.py
skills/: video.md
tests/: __init__.py  conftest.py  test_agents.py  test_bandit.py  test_belief_merge.py  test_belief_merge_pipeline.py  test_bridges.py  test_bundle_signing.py  test_competence.py  test_database.py  test_domain_validation.py  test_federation_admission.py  test_federation_dedup.py  test_federation_e2e.py  test_federation_ingest.py  test_federation_pull.py  test_federation_push.py  test_federation_verify.py  test_federation_wiring.py  test_goal_router.py  test_instance_identity.py  test_mcp.py  test_memory_commons_e2e.py  test_owner_keygen.py  test_owner_verification.py  test_phase3.py  test_preference_admission.py  test_preference_confidence.py  test_preference_e2e.py  test_preference_federation.py  test_preference_ownership.py  test_preference_validation.py  test_provenance.py  test_publish_domain_required.py  test_review_fixes.py  test_rooms.py  test_routing.py  test_routing_api.py  test_services.py  test_shared_knowledge.py  (+12 more)
(+1 files in other folders)
