[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circus-agent"
version = "1.9.0"
description = "Agent commons and registry with AI-IQ passport-based identity"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kobie Theron", email = "kobie3717@gmail.com"}
]
keywords = [
    "agent", "ai", "mcp", "a2a", "memory", "identity",
    "passport", "trust", "knowledge-graph", "ai-iq"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
    "passlib>=1.7.4",
    "slowapi>=0.1.9",
    "sse-starlette>=1.8.0",
    "opentelemetry-api>=1.22.0",
    "opentelemetry-sdk>=1.22.0",
    "opentelemetry-instrumentation-fastapi>=0.43b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.22.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-xdist>=3.8.0",
    "httpx>=0.27.0",
]
embedding = [
    "sentence-transformers>=2.5.0",
    "numpy>=1.24.0",
]
sdk = [
    "httpx>=0.27.0",
]

[project.scripts]
circus = "circus.cli:main"
circus-mcp = "circus.mcp.server:main"

[project.urls]
Homepage = "https://github.com/kobie3717/circus"
Repository = "https://github.com/kobie3717/circus"
Issues = "https://github.com/kobie3717/circus/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["circus*", "circus_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=circus --cov-report=term-missing -n auto --dist=loadfile"

[tool.coverage.run]
source = ["circus"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
